# GaussianGI-Falcor

./: CMakeLists.txt  GDeviceObject.hpp  GS3DTrainer.md  GaussianGI.cpp  GaussianGI.h  GaussianGITest.cpp  GaussianGITrain.cpp  GaussianGITrain.hpp  GaussianGITrain.ps.slang  README.md  clear_shader.sh  copy_shader.sh
Algorithm/: AliasTable.cpp  AliasTable.hpp  FrustumCull.slang  GS3D.slang  GS3DBound.hpp  GS3DBound.slangh  GaussianBlurKernel.hpp  GaussianBlurKernel.slangh  Icosahedron.hpp  Icosahedron.slangh  MeshBVH.hpp  MeshClosestPoint.hpp  MeshGSOptimize.hpp  MeshRangeSearch.hpp  MeshSample.hpp  MeshVHBVH.hpp  MeshView.hpp  Octahedron.hpp  SGGX.slang  ShaderMisc.slang  ShadowMapTransform.hpp  ShadowMapTransform.slang  SphericalHarmonics.slang  SphericalHarmonics.slangh  ThreadGroupTilingX.slang
Algorithm/DeviceSort/: DeviceSorter.cpp  DeviceSorter.hpp  DeviceSorter.slangh  DeviceSorterSizes.slangh  GlobalHist.cs.slang  OneSweep.cs.slang  Reset.cs.slang  ScanHist.cs.slang
Algorithm/GPUSorting/: DeviceSorter.cpp  DeviceSorter.hpp  OneSweep.cs.slang  SortCommon.slangh  SweepCommon.slangh
Algorithm/MeshGSTrainer/: BackwardCmd.cs.slang  BackwardDraw.3d.slang  BackwardView.cs.slang  ForwardDraw.3d.slang  ForwardView.cs.slang  Loss.cs.slang  MeshGSTrainResource.cpp  MeshGSTrainer.cpp  MeshGSTrainer.hpp  MeshGSTrainer.slang  MeshGSTrainer.slangh  MeshGSTrainerImpl.inl  Optimize.cs.slang  Refine.cs.slang  RefineStat.cs.slang  Trainer.slangh  ZeroGrad.cs.slang
Algorithm/MeshGSTrainer/Trait/: Depth.cpp  Depth.hpp  Depth.slangh  DepthAlbedo.cpp  DepthAlbedo.hpp  DepthAlbedo.slangh  DepthAlbedoNormal.cpp  DepthAlbedoNormal.hpp  DepthAlbedoNormal.slangh  ITrait.slangh
Common/: EnumUtil.hpp  GDeviceObject.hpp  GObject.hpp  ShaderUtil.hpp  ShaderUtil.slang  TextureUtil.hpp  ThreadGroupTilingX.slang
Renderer/: GRenderer.cpp  GRenderer.cs.slang  GRenderer.hpp  GRendererViewType.hpp  GVBuffer.3d.slang  GVBuffer.cpp  GVBuffer.hpp  GVBuffer.slang
Renderer/IndLight/: GIndLight.cpp  GIndLight.hpp  GIndLightArgs.hpp  GIndLightType.hpp  NoIndLight.hpp
Renderer/IndLight/3DGS/: GS3D.hpp  GS3D.slang  GS3DIndLight.cpp  GS3DIndLight.hpp  GS3DIndLightAlgo.cpp  GS3DIndLightAlgo.hpp  GS3DIndLightCull.cs.slang  GS3DIndLightDraw.3d.slang  GS3DIndLightMisc.slang  GS3DIndLightMisc.slangh  GS3DIndLightMiscPoint.3d.slang  GS3DIndLightSplat.cpp  GS3DIndLightSplat.hpp  GS3DIndLightSplat.slang  GS3DMiscData.hpp  GS3DMiscData.slang  GS3DMiscPoint.3d.slang  GS3DMiscRenderer.cpp  GS3DMiscRenderer.hpp  GS3DMiscSplatDraw.3d.slang  GS3DMiscSplatView.cs.slang
Renderer/IndLight/DDGI/: DDGIIndLight.cpp  DDGIIndLight.hpp  Grid.slang  Probe.cs.slang  Screen.cs.slang
Renderer/IndLight/GS3D/: GS3DAccelStructPrimitive.hpp  GS3DAccelStructPrimitive.slangh  GS3DIndLight.cpp  GS3DIndLight.hpp  GS3DIndLightAlgo.cpp  GS3DIndLightBlend.cs.slang  GS3DIndLightCull.cs.slang  GS3DIndLightDraw.3d.slang  GS3DIndLightProbe.cs.slang  GS3DIndLightShadow.cs.slang  GS3DIndLightSplat.cpp  GS3DIndLightSplat.hpp  GS3DIndLightSplat.slang  GS3DIndLightSplatPrimitive.hpp  GS3DIndLightSplatPrimitive.slang  GS3DIndLightSplatPrimitive.slangh  GS3DIndLightTraceShadow.rt.slang  GS3DIndLightZNormal.cs.slang
Renderer/IndLight/GS3D/Misc/: GS3DMiscColor.slang  GS3DMiscPoint.3d.slang  GS3DMiscRenderer.cpp  GS3DMiscRenderer.hpp  GS3DMiscSplatDraw.3d.slang  GS3DMiscSplatView.cs.slang  GS3DMiscTraceSplat.rt.slang
Renderer/IndLight/PathTraced/: PTIndLight.cpp  PTIndLight.cs.slang  PTIndLight.hpp
Renderer/Shadow/: GShadow.cpp  GShadow.hpp  GShadow.slang  GShadowType.hpp  StatelessShadow.hpp
Renderer/Shadow/EVSM/: EVSM.slangh  EVSMDraw.3d.slang  EVSMShadow.cpp  EVSMShadow.hpp  EVSMShadow.slang
Renderer/Shadow/PCF/: PCFShadow.cpp  PCFShadow.hpp
Renderer/Shadow/RT/: RTShadow.slang
Renderer/Shadow/VSM/: VSM.slangh  VSMBlur.cs.slang  VSMDraw.3d.slang  VSMShadow.cpp  VSMShadow.hpp  VSMShadow.slang
Scene/: GBound.hpp  GLighting.cpp  GLighting.hpp  GLighting.slang  GMesh.cpp  GMesh.hpp  GMesh.slang  GMesh.slangh  GMeshGSTrainDataset.3d.slang  GMeshGSTrainDataset.cpp  GMeshGSTrainDataset.hpp  GMeshGSTrainSplatInit.cpp  GMeshGSTrainSplatInit.cs.slang  GMeshGSTrainSplatInit.hpp  GMeshLoader.cpp  GMeshLoader.hpp  GMeshView.hpp  GScene.3d.slang  GScene.cpp  GScene.hpp  GScene.slang  GSceneObject.hpp  GStaticScene.cpp  GStaticScene.hpp  GStaticScene.slang  GStaticSceneAS.cpp  GTransform.hpp  GTransform.slang
Test/: DeviceSorterTest.cpp  GS3DIndLightAlgoTest.cpp  IndirectDispatch.cs.slang  IndirectDispatchTest.cpp
Util/: BLASUtil.cpp  BLASUtil.hpp  DeviceUtil.cpp  DeviceUtil.hpp  EnumUtil.hpp  SOABufferDefine.slangh  SOABufferUtil.hpp  SOABufferUtil.slang  SerializeUtil.hpp  ShaderUtil.hpp  TLASUtil.cpp  TLASUtil.hpp  TextureUtil.hpp  WaveOps.cs.slang
